:pencil2: Update Table Section content

--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,7 @@ __bold text__
                     </li>
                   </ul>
                   <p>
-                    <u>Table Body (rest of the rows):</u>
+                    <u>Using Pipes:</u>
                   </p>
                   <ul>
                     <li>
