:pencil: Minor content update

--- a/index.html
+++ b/index.html
@@ -1784,7 +1784,7 @@ This is another line with a blank line in between.
               href="#"
               class="link-info"
             >
-              <i class="bi bi-chevron-double-up me-2"></i>Back to contents
+              <i class="bi bi-chevron-double-up me-2"></i>Back to the top
             </a>
 
           </main>
